--- a/P_Ca_Analysis.Rmd
+++ b/P_Ca_Analysis.Rmd
@@ -29,6 +29,7 @@ library(clusterProfiler)
 library(org.Hs.eg.db)
 library(ggpubr)
 library(msigdbr)
+library(enrichplot)
 ```
 
 ### Read in and process data
@@ -231,198 +232,6 @@ genes.p001 <- lapply(genes.p001, addGeneSym)
 genes.fdr1 <- lapply(genes.fdr1, addGeneSym)
 ```
 
-
-Write results to excel workbook
-
-
-```{r}
-all.filtered.gene.lists <- list("p0.05" = genes.p05, "p0.01" = genes.p01, "p0.001" = genes.p001, "fdr0.1" = genes.fdr1)
-
-## function to write gene lists to excel
-write_results <- function(list_of_datasets){
-  mb_nb.res <- list()
-  mw_nb.res <- list()
-  nb_nw.res <- list()
-  mb_mw.res <- list()
-  mb_nw.res <- list()
-  mw_nw.res <- list()
-  
-  
-  for (i in names(list_of_datasets)){
-    for (j in names(list_of_datasets[[i]])){
-      if (j == "mb_nb"){
-        mb_nb.res[[i]] <- list_of_datasets[[i]][[j]]
-      } else if (j == "mw_nb"){
-        mw_nb.res[[i]] <- list_of_datasets[[i]][[j]]
-      } else if (j == "nb_nw"){
-        nb_nw.res[[i]] <- list_of_datasets[[i]][[j]]
-      } else if (j == "mb_nb"){
-        mb_nb.res[[i]] <- list_of_datasets[[i]][[j]]
-      } else if (j == "mb_mw"){
-        mb_mw.res[[i]] <- list_of_datasets[[i]][[j]]
-      } else if (j == "mb_nw"){
-        mb_nw.res[[i]] <- list_of_datasets[[i]][[j]]
-      } else if (j == "mw_nw"){
-        mw_nw.res[[i]] <- list_of_datasets[[i]][[j]]
-      }
-    }
-  }
-  return(list("mb_nb" = mb_nb.res, "mw_nb" = mw_nb.res, "nb_nw" = nb_nw.res, 
-         "mb_mw" = mb_mw.res, "mb_nw" = mb_nw.res, "mw_nw" = mw_nw.res))
-}
-```
-
-```{r eval=FALSE}
-to_write <- write_results(all.filtered.gene.lists)
-
-invisible(lapply(names(to_write), function(name) {
-  write.xlsx(to_write[[name]], file = paste0("./filtered_gene_lists/", name, ".xlsx"), rowNames = T)
-  }
-))
-```
-
-
-
-
----
-
-
-
-## Gene Set Enrichment Analysis
-
-GO and KEGG are the most frequently used for functional analysis. They are typically the first choice because of their long-standing curation and availability for a wide range of species.
-
-* Typically, GSEA is run on all genes, not only over/under expressed genes. This information will be taken care of by providing GSEA a **ranked** list of genes.
-
-* Important that the result is not that a specific pathway that is up- or down-regulated, but the fact that the pathway is affected in some way by the condition that you are studying.
-
-  - [https://www.biostars.org/p/449956/](https://www.biostars.org/p/449956/)
-
-* The GSEA algorithm does not filter the expression dataset and generally does not benefit from your filtering of the expression dataset. During the analysis, genes that are poorly expressed or that have low variance across the dataset populate the middle of the ranked gene list and the use of a weighted statistic ensures that they do not contribute to a positive enrichment score. By removing such genes from your dataset, you may actually reduce the power of the statistic.
-
-
-### First I will perform gene set enrichment analysis on GO terms.
-
-```{r}
-## first step of GSEA is to rank your entire list of genes
-## this can be done by multiplying the logFC by -10log(pval) to account for both expression level and significance
-
-all.tables <- lapply(all.res, function(x) topTags(x, n = nrow(x), adjust.method = "BH"))
-
-makeGeneLists <- function(x) {
-  x %>%
-    as.data.frame() %>% mutate(stat = logFC * -log10(PValue)) %>% 
-    rownames_to_column(var = "ENSEMBL") %>% 
-    mutate(ENSEMBL = str_replace(ENSEMBL, ".[0-9]{1,2}$", "")) %>% 
-    dplyr::select(ENSEMBL, stat) %>%
-    arrange(-stat) %>%
-    tibble::deframe()
-}
-
-
-all.geneLists <- lapply(all.tables, makeGeneLists)
-```
-
-
-```{r gsea, warning=FALSE}
-all.gsea <- lapply(all.geneLists, function(x) gseGO(geneList = x, OrgDb = org.Hs.eg.db, keyType = "ENSEMBL", minGSSize = 100, maxGSSize = 500,  nPermSimple = 10000, pvalueCutoff = 1, verbose = F, eps = 1e-300))
-```
-
-```{r fig.height=8, message=FALSE}
-#lapply(all.gsea, function(x) as.data.frame(x))
-lapply(names(all.gsea), function(x) dotplot(all.gsea[[x]], showCategory=20, title = paste(x %>%
-                    str_replace_all("n", "Non-Malignant ") %>%
-                    str_replace_all("m", "Malignant ") %>%
-                    str_replace_all("b", "African") %>%
-                    str_replace_all("w", "Caucasian") %>%
-                    str_replace_all("_", " -VS- "), "GSEA Results")) + scale_y_discrete(labels = function(x) stringr::str_wrap(x, width = 30)))
-```
-
-```{r write gsea results to excel file, eval=FALSE}
-# write separate files for each comparison
-invisible(lapply(names(all.gsea), function(x){ 
-  write.xlsx(all.gsea[[x]], 
-             file = paste0("./gene_set_enrichment_analysis_results/", x, ".xlsx"))
-  }
-))
-```
-
-
-
-## Pathway enrichment analysis (over representation analysis)
-
-Pathway enrichment analysis is done on differentially expressed genes, typically filtered by p-value and logFC. It tests the probability of your genes matching a gene set, against the probability of matching the gene set at random.
-
-
-First, separate the filtered gene lists into upregulated and downregulated genes.
-
-```{r}
-## separate list of up and down regulated genes
-genes.p05up <- lapply(genes.p05, function(x) filter(x, logFC > 0))
-genes.p05dn <- lapply(genes.p05, function(x) filter(x, logFC < 0))
-genes.p01up <- lapply(genes.p01, function(x) filter(x, logFC > 0))
-genes.p01dn <- lapply(genes.p01, function(x) filter(x, logFC < 0))
-genes.p001up <- lapply(genes.p001, function(x) filter(x, logFC > 0))
-genes.p001dn <- lapply(genes.p001, function(x) filter(x, logFC < 0))
-genes.fdr1up <- lapply(genes.fdr1, function(x) filter(x, logFC > 0))
-genes.fdr1dn <- lapply(genes.fdr1, function(x) filter(x, logFC < 0))
-```
-
-Write functions to take gene lists an input and run an over representation analysis against a specified database. Here, I will be using GO (gene ontology database) and the H (hallmark) and C6 (oncogenic gene set) from MSigDb (molecular signatures database).
-
-```{r}
-## function to run over representation analysis on GO database
-runenrichGO <- function(x){
-  enrichGO(gene = AnnotationDbi::select(org.Hs.eg.db, keys = rownames(x), columns='ENTREZID', keytype='ENSEMBL') %>% pull(ENTREZID), ont = "ALL", OrgDb = org.Hs.eg.db, readable = TRUE)
-}
-
-
-## prepare dataframe for MSigDb search
-hmk <- msigdbr::msigdbr(species = "Homo sapiens", category = "H") %>% dplyr::select(gs_name, entrez_gene)
-C6 <- msigdbr::msigdbr(species = "Homo sapiens", category = "C6") %>% dplyr::select(gs_name, entrez_gene)
-m_df <- rbind(hmk, C6) ## I will search against Hallmark Gene Set and Oncogene Set
-
-
-## function to run over representation analysis on Molecular Signatures Database
-runMsigdbEnricher <- function(x){
-  enricher(AnnotationDbi::select(org.Hs.eg.db, keys = rownames(x), columns='ENTREZID', keytype='ENSEMBL') %>% pull(ENTREZID), TERM2GENE = m_df)
-}
-```
-
-#### Run over representation analysis
-
-```{r}
-## create list to hold all filtered gene lists (up and down regulated)
-filtered.geneLists <- list("genes.p05up" = genes.p05up, "genes.p05dn" = genes.p05dn, "genes.p01up" = genes.p01up, "genes.p01dn" = genes.p01dn, "genes.p001up" = genes.p001up, "genes.p001dn" = genes.p001dn, "genes.fdr1up" = genes.fdr1up, "genes.fdr1dn" = genes.fdr1dn)
-
-
-## run analysis on over representated pathways in GO and MSigDb
-all.ego.res <- lapply(filtered.geneLists, function(y) lapply(y, runenrichGO))
-all.msigdb.res <- lapply(filtered.geneLists, function(y) lapply(y, runMsigdbEnricher))
-```
-
-```{r, eval=FALSE}
-## split results into their respective comparisons (ex: Malignant African vs Nonmalignant African)
-msigdb_to_write <- write_results(all.msigdb.res)
-ego_to_write <- write_results(all.ego.res)
-
-
-## each excel sheet will contain all pathway analysis results for one comparison
-## the tabs on each sheet will be separated by filtering and whether an upregulated or downregulated list was used for the comparison (ex: p < 0.01, upregulated gene list)
-
-invisible(lapply(names(msigdb_to_write), function(name) {
-  write.xlsx(msigdb_to_write[[name]], file = paste0("./MSigDb_ORA_results/", name, ".xlsx"), rowNames = T)
-  }
-))
-
-invisible(lapply(names(msigdb_to_write), function(name) {
-  write.xlsx(msigdb_to_write[[name]], file = paste0("./GO_ORA_results/", name, ".xlsx"), rowNames = T)
-  }
-))
-```
-
-
-
 ---
 
 
@@ -514,7 +323,248 @@ Save MA plots
 ```
 
 
+
+
 ---
+
+
+
+## Gene Set Enrichment Analysis
+
+GO and KEGG are the most frequently used for functional analysis. They are typically the first choice because of their long-standing curation and availability for a wide range of species.
+
+* Typically, GSEA is run on all genes, not only over/under expressed genes. This information will be taken care of by providing GSEA a **ranked** list of genes.
+
+* Important that the result is not that a specific pathway that is up- or down-regulated, but the fact that the pathway is affected in some way by the condition that you are studying.
+
+  - [https://www.biostars.org/p/449956/](https://www.biostars.org/p/449956/)
+
+* The GSEA algorithm does not filter the expression dataset and generally does not benefit from your filtering of the expression dataset. During the analysis, genes that are poorly expressed or that have low variance across the dataset populate the middle of the ranked gene list and the use of a weighted statistic ensures that they do not contribute to a positive enrichment score. By removing such genes from your dataset, you may actually reduce the power of the statistic.
+
+
+### First I will perform gene set enrichment analysis on GO terms.
+
+```{r}
+## first step of GSEA is to rank your entire list of genes
+## this can be done by multiplying the logFC by -10log(pval) to account for both expression level and significance
+
+all.tables <- lapply(all.res, function(x) topTags(x, n = nrow(x), adjust.method = "BH"))
+
+makeGeneLists <- function(x) {
+  x %>%
+    as.data.frame() %>% mutate(stat = logFC * -log10(PValue)) %>% 
+    rownames_to_column(var = "ENSEMBL") %>% 
+    mutate(ENSEMBL = str_replace(ENSEMBL, ".[0-9]{1,2}$", "")) %>% 
+    dplyr::select(ENSEMBL, stat) %>%
+    arrange(-stat) %>%
+    tibble::deframe()
+}
+
+
+all.geneLists <- lapply(all.tables, makeGeneLists)
+```
+
+
+```{r gsea, warning=FALSE}
+all.gsea <- lapply(all.geneLists, function(x) gseGO(geneList = x, OrgDb = org.Hs.eg.db, keyType = "ENSEMBL", minGSSize = 100, maxGSSize = 500,  nPermSimple = 10000, pvalueCutoff = 1, verbose = F, eps = 1e-300))
+```
+
+Dotplot of enriched pathways
+
+```{r fig.height=8, message=FALSE}
+#lapply(all.gsea, function(x) as.data.frame(x))
+lapply(names(all.gsea), function(x) dotplot(all.gsea[[x]], showCategory=20, title = paste(x %>%
+                    str_replace_all("n", "Non-Malignant ") %>%
+                    str_replace_all("m", "Malignant ") %>%
+                    str_replace_all("b", "African") %>%
+                    str_replace_all("w", "Caucasian") %>%
+                    str_replace_all("_", " -VS- "), "GSEA Results")) + scale_y_discrete(labels = function(x) stringr::str_wrap(x, width = 30)))
+```
+
+##### Network plots of enriched pathways
+
+```{r fig.height=10, fig.width=10, message=FALSE}
+lapply(names(all.gsea), function(x){
+  cnetplot(setReadable(all.gsea[[x]], 'org.Hs.eg.db', 'ENSEMBL'), 
+           foldChange = all.geneLists[[x]]) + 
+    scale_color_gradient2(name="logFC * -log10(pvalue)", low='darkblue', high='firebrick') +
+    ggtitle(label = paste(x %>%
+                    str_replace_all("n", "Non-Malignant ") %>%
+                    str_replace_all("m", "Malignant ") %>%
+                    str_replace_all("b", "African") %>%
+                    str_replace_all("w", "Caucasian") %>%
+                    str_replace_all("_", " -VS- "), "GSEA Results"))
+})
+```
+
+
+###### Heatmaps of enriched pathways
+
+```{r}
+heatplot(setReadable(all.gsea$mb_nb, 'org.Hs.eg.db', 'ENSEMBL'), all.gsea$mb_nb, foldChange=all.geneLists$mb_nb, showCategory=10) + 
+    scale_color_gradient2(name="logFC * -log10(pvalue)", low='darkblue', high='firebrick') +
+    ggtitle(label = paste("mb_nb" %>%
+                    str_replace_all("n", "Non-Malignant ") %>%
+                    str_replace_all("m", "Malignant ") %>%
+                    str_replace_all("b", "African") %>%
+                    str_replace_all("w", "Caucasian") %>%
+                    str_replace_all("_", " -VS- "), "GSEA Results"))
+```
+
+##### Upset plots of enriched pathways
+
+```{r fig.width=8}
+lapply(all.gsea, upsetplot)
+```
+
+
+
+
+```{r write gsea results to excel file, eval=FALSE}
+# write separate files for each comparison
+invisible(lapply(names(all.gsea), function(x){ 
+  write.xlsx(all.gsea[[x]], 
+             file = paste0("./gene_set_enrichment_analysis_results/", x, ".xlsx"))
+  }
+))
+```
+
+
+
+## Pathway enrichment analysis (over representation analysis)
+
+Pathway enrichment analysis is done on differentially expressed genes, typically filtered by p-value and logFC. It tests the probability of your genes matching a gene set, against the probability of matching the gene set at random.
+
+
+First, separate the filtered gene lists into upregulated and downregulated genes.
+
+```{r}
+## separate list of up and down regulated genes
+genes.p05up <- lapply(genes.p05, function(x) filter(x, logFC > 0))
+genes.p05dn <- lapply(genes.p05, function(x) filter(x, logFC < 0))
+genes.p01up <- lapply(genes.p01, function(x) filter(x, logFC > 0))
+genes.p01dn <- lapply(genes.p01, function(x) filter(x, logFC < 0))
+genes.p001up <- lapply(genes.p001, function(x) filter(x, logFC > 0))
+genes.p001dn <- lapply(genes.p001, function(x) filter(x, logFC < 0))
+genes.fdr1up <- lapply(genes.fdr1, function(x) filter(x, logFC > 0))
+genes.fdr1dn <- lapply(genes.fdr1, function(x) filter(x, logFC < 0))
+```
+
+Write gene lists to excel.
+
+```{r}
+all.filtered.gene.lists <- list("p0.05upreg" = genes.p05up, "p0.05downreg" = genes.p05dn, 
+                                "p0.01upreg" = genes.p01up, "p0.01downreg" = genes.p01dn, 
+                                "p0.001upreg" = genes.p001up, "p0.001downreg" = genes.p001dn, 
+                                "fdr0.1upreg" = genes.fdr1up, "fdr0.1downreg" = genes.fdr1dn)
+
+## function to write gene lists to excel
+write_results <- function(list_of_datasets){
+  mb_nb.res <- list()
+  mw_nb.res <- list()
+  nb_nw.res <- list()
+  mb_mw.res <- list()
+  mb_nw.res <- list()
+  mw_nw.res <- list()
+  
+  
+  for (i in names(list_of_datasets)){
+    for (j in names(list_of_datasets[[i]])){
+      if (j == "mb_nb"){
+        mb_nb.res[[i]] <- list_of_datasets[[i]][[j]]
+      } else if (j == "mw_nb"){
+        mw_nb.res[[i]] <- list_of_datasets[[i]][[j]]
+      } else if (j == "nb_nw"){
+        nb_nw.res[[i]] <- list_of_datasets[[i]][[j]]
+      } else if (j == "mb_nb"){
+        mb_nb.res[[i]] <- list_of_datasets[[i]][[j]]
+      } else if (j == "mb_mw"){
+        mb_mw.res[[i]] <- list_of_datasets[[i]][[j]]
+      } else if (j == "mb_nw"){
+        mb_nw.res[[i]] <- list_of_datasets[[i]][[j]]
+      } else if (j == "mw_nw"){
+        mw_nw.res[[i]] <- list_of_datasets[[i]][[j]]
+      }
+    }
+  }
+  return(list("mb_nb" = mb_nb.res, "mw_nb" = mw_nb.res, "nb_nw" = nb_nw.res, 
+         "mb_mw" = mb_mw.res, "mb_nw" = mb_nw.res, "mw_nw" = mw_nw.res))
+}
+```
+
+```{r eval=FALSE}
+to_write <- write_results(all.filtered.gene.lists)
+
+invisible(lapply(names(to_write), function(name) {
+  write.xlsx(to_write[[name]], file = paste0("./filtered_gene_lists/", name, "_filtered_gene_lists.xlsx"), rowNames = T)
+  }
+))
+```
+
+
+Write functions to take gene lists an input and run an over representation analysis against a specified database. Here, I will be using GO (gene ontology database) and the H (hallmark) and C6 (oncogenic gene set) from MSigDb (molecular signatures database).
+
+```{r}
+## function to run over representation analysis on GO database
+runenrichGO <- function(x){
+  enrichGO(gene = AnnotationDbi::select(org.Hs.eg.db, keys = rownames(x), columns='ENTREZID', keytype='ENSEMBL') %>% pull(ENTREZID), ont = "ALL", OrgDb = org.Hs.eg.db, readable = TRUE)
+}
+
+
+## prepare dataframe for MSigDb search
+hmk <- msigdbr::msigdbr(species = "Homo sapiens", category = "H") %>% dplyr::select(gs_name, entrez_gene)
+C6 <- msigdbr::msigdbr(species = "Homo sapiens", category = "C6") %>% dplyr::select(gs_name, entrez_gene)
+m_df <- rbind(hmk, C6) ## I will search against Hallmark Gene Set and Oncogene Set
+
+
+## function to run over representation analysis on Molecular Signatures Database
+runMsigdbEnricher <- function(x){
+  enricher(AnnotationDbi::select(org.Hs.eg.db, keys = rownames(x), columns='ENTREZID', keytype='ENSEMBL') %>% pull(ENTREZID), TERM2GENE = m_df)
+}
+```
+
+#### Run over representation analysis
+
+```{r, message=FALSE}
+## create list to hold all filtered gene lists (up and down regulated)
+filtered.geneLists <- list("genes.p05up" = genes.p05up, "genes.p05dn" = genes.p05dn, "genes.p01up" = genes.p01up, "genes.p01dn" = genes.p01dn, "genes.p001up" = genes.p001up, "genes.p001dn" = genes.p001dn, "genes.fdr1up" = genes.fdr1up, "genes.fdr1dn" = genes.fdr1dn)
+
+
+## run analysis on over representated pathways in GO and MSigDb
+all.ego.res <- lapply(filtered.geneLists, function(y) lapply(y, runenrichGO))
+all.msigdb.res <- lapply(filtered.geneLists, function(y) lapply(y, runMsigdbEnricher))
+```
+
+```{r, eval=FALSE}
+## split results into their respective comparisons (ex: Malignant African vs Nonmalignant African)
+msigdb_to_write <- write_results(all.msigdb.res)
+ego_to_write <- write_results(all.ego.res)
+
+
+## each excel sheet will contain all pathway analysis results for one comparison
+## the tabs on each sheet will be separated by filtering and whether an upregulated or downregulated list was used for the comparison (ex: p < 0.01, upregulated gene list)
+
+invisible(lapply(names(msigdb_to_write), function(name) {
+  write.xlsx(msigdb_to_write[[name]], file = paste0("./MSigDb_ORA_results/", name, ".xlsx"), rowNames = T)
+  }
+))
+
+invisible(lapply(names(msigdb_to_write), function(name) {
+  write.xlsx(msigdb_to_write[[name]], file = paste0("./GO_ORA_results/", name, ".xlsx"), rowNames = T)
+  }
+))
+```
+
+
+---
+
+### Molecular Pathways Plots
+
+```{r}
+cnetplot(all.ego.res$genes.p05up$mb_nb)
+```
+
+
 
 ## DESeq2
 
